doc/results040316.txt
Chgs to sdramdev.txt
  870 |    wb_sdram_addr[22-1:0],
      |                 ^
                ... Use "/* verilator lint_off WIDTH */" and lint_on around source to disable this message.
modified main.v
+               /* verilator lint_off WIDTH */
                        @$(SLAVE.PORTLIST),
+               /* verilator lint_off WIDTH */

		/* verilator lint_off WIDTH */
			wb_sdram_cyc, wb_sdram_stb, wb_sdram_we,
			wb_sdram_addr[22-1:0],
			wb_sdram_data, // 32 bits wide
			wb_sdram_sel,  // 32/8 bits wide
		wb_sdram_stall, wb_sdram_ack, wb_sdram_idata,
		/* verilator lint_off WIDTH */
		
-       m_@$(MEM.NAME) = new SDRAMSIM(@$NBYTES);
+       m_@$(MEM.NAME) = new SDRAMSIM();

make clean; make
yosys  nextpnr icepack ok.

-rw-r--r-- 1 devel devel 5607178 Apr  3 06:01 rtl/icozip/icozip.asc
-rw-r--r-- 1 devel devel  135100 Apr  3 06:01 rtl/icozip/icozip.bin
-rw-r--r-- 1 devel devel 7990332 Apr  3 05:54 rtl/icozip/icozip.json
-rw-r--r-- 1 devel devel    7974 Apr  2 20:26 rtl/icozip/icozip.pcf

-rwxr-xr-x 1 devel devel 2120084 Apr  2 20:50 sim/verilated/arm-main_tb

-rwxr-xr-x 1 devel devel 72364 Apr  2 20:51 sw/host/arm-flashid
-rwxr-xr-x 1 devel devel 81676 Apr  2 20:51 sw/host/arm-wbregs

make --no-print-directory -C sw/host
g++ -g -Wall -I. -I../../rtl/icozip -c dumpflash.cpp -o obj-arm/dumpflash.o
dumpflash.cpp: In function ‘int main(int, char**)’:

dumpflash.cpp:56:20: error: ‘FLASHLEN’ was not declared in this scope
 #define DUMPWORDS (FLASHLEN>>2) // 16MB Flash
                    ^~~~~~~~
dumpflash.cpp:68:20: note: in expansion of macro ‘DUMPWORDS’
  const int BUFLN = DUMPWORDS; // 1MB Flash
                    ^~~~~~~~~
dumpflash.cpp:55:18: error: ‘FLASHBASE’ was not declared in this scope
 #define DUMPMEM  FLASHBASE
                  ^~~~~~~~~
dumpflash.cpp:127:18: note: in expansion of macro ‘DUMPMEM’
    m_fpga->readi(DUMPMEM, BUFLN, buf);
                  ^~~~~~~
dumpflash.cpp:55:18: error: ‘FLASHBASE’ was not declared in this scope
 #define DUMPMEM  FLASHBASE
                  ^~~~~~~~~
dumpflash.cpp:130:29: note: in expansion of macro ‘DUMPMEM’
     buf[i] = m_fpga->readio(DUMPMEM+i);
                             ^~~~~~~
make[1]: *** [Makefile:79: obj-arm/dumpflash.o] Error 1
make: *** [Makefile:197: sw-host] Error 2

Testing simulator. 
./arm-main_tb 
Listening on port 8363
Listening on port 8364
> T
Accepted CMD connection
< A01000015R
> A01000015R20210402
<  [CLOSED]

Testing zipcpu software

./arm-wbregs version
01000014 ( VERSION) : [.!..] 20210402

#define	R_BUSTIMER      	0x00400000	// 00400000, wbregs names: BUSTIMER
// The watchdog timer
#define	R_WATCHDOG      	0x00800000	// 00800000, wbregs names: WATCHDOG
// CONSOLE registers
#define	R_CONSOLE_FIFO  	0x00c00004	// 00c00000, wbregs names: UFIFO
#define	R_CONSOLE_UARTRX	0x00c00008	// 00c00000, wbregs names: RX
#define	R_CONSOLE_UARTTX	0x00c0000c	// 00c00000, wbregs names: TX
#define	R_BUILDTIME     	0x01000000	// 01000000, wbregs names: BUILDTIME
#define	R_BUSERR        	0x01000004	// 01000004, wbregs names: BUSERR
#define	R_PIC           	0x01000008	// 01000008, wbregs names: PIC
#define	R_GPIO          	0x0100000c	// 0100000c, wbregs names: GPIO, GPI, GPO
#define	R_PWRCOUNT      	0x01000010	// 01000010, wbregs names: PWRCOUNT
#define	R_VERSION       	0x01000014	// 01000014, wbregs names: VERSION
#define	R_BKRAM         	0x01400000	// 01400000, wbregs names: RAM
#define	R_SDRAM         	0x02000000	// 02000000, wbregs names: SDRAM
#define	R_ZIPCTRL       	0x04000000	// 04000000, wbregs names: CPU
#define	R_ZIPDATA       	0x04000004	// 04000000, wbregs names: CPUD

 ./arm-main_tb 
Listening on port 8363
Listening on port 8364
> T
Accepted CMD connection
< A02000005W55
> A02000005K00000000
<  [CLOSED]
Accepted CMD connection
< A02000009Waa
> A02000009K00000000
<  [CLOSED]
Accepted CMD connection
< A02000005R
> A02000005R00000000
<  [CLOSED]
Accepted CMD connection
< A02000009R
> A02000009R00000000
<  [CLOSED]


./arm-wbregs 0x02000004 0x55
./arm-wbregs 0x02000008 0xAA
./arm-wbregs 0x02000004
./arm-wbregs 0x02000008
